--- a/SUBSCRIBE 2/index.html
+++ b/SUBSCRIBE 2/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- Created By CodingLab - www.codinglabweb.com -->
+
 
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <!--<title> Subscription Form | CodingLab </title>--->
+    <title> SubscriptiON </title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
